--- a/WritersBlock/WritersBlock/WritersBlock.csproj
+++ b/WritersBlock/WritersBlock/WritersBlock.csproj
@@ -318,8 +318,8 @@
     <Compile Include="Assets\Scripts\About.cs" />
     <Compile Include="Assets\Scripts\Exit.cs" />
     <Compile Include="Assets\Scripts\FullscreenSprite.cs" />
+    <Compile Include="Assets\Scripts\GameController.cs" />
     <Compile Include="Assets\Scripts\InventoryController.cs" />
-    <Compile Include="Assets\Scripts\Page.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\SentenceBlankController.cs" />
     <Compile Include="Assets\Scripts\SentenceController.cs" />
